# Quant-dev-practice

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: default_config.yaml  example.env
docs/superpowers/plans/: 2026-04-12-quantflow-phase1.md  2026-04-12-quantflow-phase2.md  2026-04-12-quantflow-phase3a-part1.md  2026-04-12-quantflow-phase3a-part2.md  2026-04-12-quantflow-phase3b-part1.md  2026-04-12-quantflow-phase3b-part2.md
docs/superpowers/specs/: 2026-04-12-quantflow-design.md  2026-04-12-quantflow-phase3a-design.md  2026-04-12-quantflow-phase3b-design.md
quantflow/analytics/: metrics.py  tearsheet.py
quantflow/assistant/: chat.py  provider.py  tools.py
quantflow/backtest/: engine.py  execution.py  optimizer.py  walk_forward.py
quantflow/cli/: main.py
quantflow/core/: events.py  interfaces.py  models.py
quantflow/dashboard/: app.py
quantflow/data/: cache.py  ccxt_fetcher.py  fred_fetcher.py  indicators.py  manager.py  yahoo_fetcher.py
quantflow/examples/: data_demo.py  mean_reversion.py  ml_classifier.py  rsi_macd.py  sma_crossover.py
quantflow/live/: paper_trader.py
quantflow/ml/: base.py  features.py  registry.py
quantflow/portfolio/: risk.py  sizing.py
quantflow/strategies/: base.py  composite.py  lstm_forecaster.py  macro_regime.py  mean_reversion.py  ml_classifier.py  pairs_trading.py  registry.py  rsi_macd.py  sma_crossover.py
tests/test_analytics/: test_metrics.py
tests/test_assistant/: test_tools.py
tests/test_backtest/: test_engine.py  test_execution.py  test_optimizer.py  test_walk_forward.py
tests/test_cli/: test_cli.py
tests/test_core/: test_events.py  test_models.py
tests/test_data/: test_cache.py  test_ccxt_fetcher.py  test_fred_fetcher.py  test_indicators.py  test_manager.py  test_yahoo_fetcher.py
tests/test_live/: test_paper_trader.py
tests/test_ml/: test_features.py  test_registry.py
tests/test_portfolio/: test_risk.py  test_sizing.py
tests/test_strategies/: test_composite.py  test_lstm_forecaster.py  test_macro_regime.py  test_mean_reversion.py  test_ml_classifier.py  test_pairs_trading.py  test_rsi_macd.py  test_sma_crossover.py
