[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantflow"
version = "0.1.0"
description = "Quantitative research and backtesting platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.18",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "fredapi>=0.5",
    "ccxt>=4.0",
    "python-dotenv>=1.0",
    "statsmodels>=0.14",
    "click>=8.0",
]

[project.scripts]
quantflow = "quantflow.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "torch>=2.0",
    "joblib>=1.3",
]
llm = [
    "anthropic>=0.40",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.0",
]
live = [
    "alpaca-py>=0.30",
]

[tool.setuptools.packages.find]
include = ["quantflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:locust"
